--- a/style.css
+++ b/style.css
@@ -11,3 +11,20 @@
     margin-bottom: 2px;
     background-repeat: no-repeat;
 }
+.logo{
+    text-align: center;
+}
+#name{
+    text-align: center;
+    color: white;
+    font-family: arial;
+    font-size: large;
+}
+.range{
+    display: flex;
+    padding: 1px;
+    font-weight: 900;
+    border: 9px hidden;
+    width: 100;
+    height: 150px;
+}
