--- a/style.css
+++ b/style.css
@@ -28,3 +28,9 @@
     width: 100;
     height: 150px;
 }
+#ball{
+    width: 25%;
+    font-family:  sans-serif;
+    height: 150;
+    background-color: #F15E29;
+}
