--- a/style.css
+++ b/style.css
@@ -34,3 +34,10 @@
     height: 150;
     background-color: #F15E29;
 }
+.happytime{
+    padding: 20px;
+    font-family: Arial;
+    background-color: white;
+    margin: 0px;
+    border: whitesmoke 0px;
+}
