--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 .container{
-    width: 95%;
-    padding: 2px;
-    margin: 0px;
+    width: 100%;
+    padding: 1px;
+    margin: 2px;
 }
 .front{
     background-image: url(images/backgrounds/landing.jpg);
     background-size: cover;
     height: 350px;
     width: 100%;
-    margin-bottom: 2px;
+    margin-bottom: 1px;
     background-repeat: no-repeat;
 }
 .logo{
@@ -22,9 +22,9 @@
 }
 .range{
     display: flex;
-    padding: 1px;
+    padding: 2px;
     font-weight: 900;
-    border: 9px hidden;
+    border: 10px hidden;
     width: 100;
     height: 150px;
 }
@@ -81,3 +81,191 @@
     width: 25%;
     background-image: url(images/foodtop/dinner.jpg);
 }
+.food1 {
+    margin-top: 0px;
+    width: 80%;
+    padding: 10% 10% 0 10%;
+    display: flex;
+    flex-direction: row;
+} 
+.food-images {
+    height: 50%;
+    border: white solid 1px;
+    box-sizing: border-box;
+    box-shadow: 5px 5px 5px 5px lightgray;
+    margin: 0 70px 0 0;
+}
+.food-images , .food2{
+    display: flex;
+    flex-direction: column;
+}  
+.fastfood {
+    margin: 15px 0 15px 0;
+}
+#food-image1 {
+    padding: 20px 20px 0 20px;
+}
+#food-image2 {
+    padding: 0 20px 20px 20px;
+}
+#heading {
+    font-size: 40px;
+    color: rgb(59, 57, 57);
+}
+#caption {
+    font-size: 30px;
+    color: rgb(29, 29, 29);
+}
+#description {
+    font-size: 20px;
+    color: rgb(59, 57, 57);
+    display: inline-block;
+}
+  
+.viewgallery:hover {
+    background-color: #fff;
+    color: #f15e29;
+    border-radius: 4px;
+    font-size: 15px;
+    border-color: #f15e29;
+    width: 200px;
+
+}
+.drinks1 {
+    width: 80;
+    margin: auto;
+    padding: 10% 10% 0 10%;
+    display: flex;
+    flex-direction: row;
+  }
+  
+.drinks-show-images {
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    border: white solid 1px;
+    box-sizing: border-box;
+    box-shadow: 5px 5px 5px 5px lightgray;
+    margin: 0 0 0 70px;
+}
+.drinks2 {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+.drinksheading {
+    margin: 15px 0 15px 0;
+}
+#drinks-image1 {
+    padding: 20px 0 20px 20px;
+}
+#drinks-image2 {
+    padding: 20px 20px 20px 0;
+}
+  
+#messaging {
+    font-size: 20px;
+    color: rgb(31, 30, 30);
+}
+#drinks4 {
+    font-size: 20px;
+    color: rgb(59, 57, 57);
+    display: block;
+}
+  
+.viewdrinks:hover {
+    background-color: #fff;
+    color: #f15e29;
+    border-radius: 4px;
+    font-size: 15px;
+    border-color: #f15e29;
+    width: 200px;
+}
+.viewdrinks , .viewgallery{
+    color: #f15a29;
+    border: #f15a29 1px solid;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 30px;
+}
+.foodnav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(./images/backgrounds/foodsBg.jpg);
+    background-repeat: no-repeat;
+    margin-top: 150px;
+    background-size: cover;
+    height: 599px;
+}
+  
+.slide1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 400px;
+    width: 60%;
+    background-color: white;
+    margin: auto;
+  }
+.slider {
+    display: flex;
+    flex-direction: row;
+    height: 65px;
+    width: 100%;
+    justify-content: center;
+    font-size: large;
+}
+#tab1 {
+    flex-grow: 1;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+}
+#tab2 , #tab3 , #tab4{
+    border: 1px solid gray;
+    flex-grow: 1;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    background-color: lightgray;
+}
+
+.arrows {
+    color: #f15a29;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 280px;
+    justify-content: space-around;
+    text-align: center;
+    align-items: center;
+    padding: 0 0 20px 0;
+}
+.leftarrow {
+    margin: 0 10 10px 10px;
+}
+.slider-right-arrow {
+    margin: 0 10px 10px 0;
+}
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+.right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+.right , .left{
+    border: solid #f15a29;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 0 0 20px 20px;
+
+}
+#burger-image , #beef-image , #pizza-image{
+    width: 100%;
+    height: auto;
+}
+
