--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     font-family: Arial;
     background-color: white;
     margin: 0px;
-    border: whitesmoke 0px;
+    border: white 0px;
 }
 .partytime{
     padding: 2px;
