--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
     font-family: Arial;
     background-color: white;
     margin: 0px;
+    text-align: center;
     border: white 0px;
 }
 .partytime{
